--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
   },
   "dependencies": {
     "@apollo/server": "^4.5.0",
+    "@devoxa/prisma-relay-cursor-connection": "^2.2.2",
     "@nestjs/apollo": "^11.0.4",
     "@nestjs/common": "^9.0.0",
     "@nestjs/config": "^2.3.1",
@@ -32,6 +33,8 @@
     "class-transformer": "^0.5.1",
     "class-validator": "^0.14.0",
     "graphql": "^16.6.0",
+    "graphql-relay": "^0.10.0",
+    "nestjs-graphql-relay": "^9.0.0",
     "reflect-metadata": "^0.1.13",
     "rimraf": "^3.0.2",
     "rxjs": "^7.2.0"
