--- a/.github/workflows/cd.yml
+++ b/.github/workflows/cd.yml
@@ -29,13 +29,12 @@ jobs:
         run: |
           docker build \
             --build-arg DATABASE_URL=${{ env.DATABASE_URL }} \
-            --tag ${{ env.ECR_REGISTRY }}/${{ env.ECR_REPOSITORY }}:latest \
+            -t uhdre-gamdi-api \
             .
-          echo "::set-output name=image-tag::${{ env.ECR_REGISTRY }}/${{ env.ECR_REPOSITORY }}:latest"
+      - name: Tag Docker iamge
+        id: tag-image
+        run: docker tag uhdre-gamdi-api:latest 078512149071.dkr.ecr.ap-northeast-2.amazonaws.com/uhdre-gamdi-api:latest
 
       - name: Push Docker image to Amazon ECR
-        uses: docker/build-push-action@v2
-        with:
-          context: .
-          push: true
-          tags: ${{ steps.build-image.outputs.image-tag }}
+        id: push-image
+        run: docker push 078512149071.dkr.ecr.ap-northeast-2.amazonaws.com/uhdre-gamdi-api:latest
