--- a/.github/workflows/cd.yml
+++ b/.github/workflows/cd.yml
@@ -8,6 +8,7 @@ on:
 env:
   ECR_REGISTRY: 078512149071.dkr.ecr.ap-northeast-2.amazonaws.com
   ECR_REPOSITORY: uhdre-gamdi-api
+  EKS_CLUSTER_NAME: goormthon-cluster
   AWS_REGION: ap-northeast-2
   AWS_ACCESS_KEY_ID: ${{ secrets.AWS_ACCESS_KEY_ID }}
   AWS_SECRET_ACCESS_KEY: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
@@ -17,6 +18,13 @@ jobs:
   build-and-deploy:
     runs-on: ubuntu-latest
     steps:
+      - name: Configure AWS credentials
+        uses: aws-actions/configure-aws-credentials@v1
+        with:
+          aws-access-key-id: ${{ secrets.AWS_ACCESS_KEY_ID }}
+          aws-secret-access-key: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
+          aws-region: ${{ secrets.AWS_REGION }}
+
       - name: Checkout source code
         uses: actions/checkout@v2
 
@@ -41,4 +49,16 @@ jobs:
 
       - name: Push Docker image to Amazon ECR
         id: push-image
-        run: docker push ${{ env.ECR_REGISTRY }}/${{ env.ECR_REPOSITORY }}:latest
+        run: docker push ${{ env.ECR_REGISTRY }}/${{ env.ECR_REPOSITORY }}:${{ steps.package-version.outputs.current-version}}
+
+      - name: Configure EKS
+        id: configure-eks
+        run: aws eks update-kubeconfig --region ${{ env.AWS_REGION }} --name ${{ env.EKS_CLUSTER_NAME }}
+
+      - name: Apply yaml
+        id: apply-yaml
+        env:
+          ECR_REGISTRY: 078512149071.dkr.ecr.ap-northeast-2.amazonaws.com
+          ECR_REPOSITORY: uhdre-gamdi-api
+          TAG: ${{ steps.package-version.outputs.current-version}}
+        run: kubectl apply -f index.yaml
